<resources>
    <string name="app_name">Smart Medicine Box</string>

    <!-- intro activity -->
    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Looking for a good medicine routine? We got you covered!</string>

    <!-- sign up/in activity -->
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_description_text">Enter your name, email id and password to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_description_text">Enter your email id and password to sign in.</string>

    <!-- progress dialog -->
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait…</string>

    <!-- nav header main -->
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <!-- profile -->
    <string name="update">UPDATE</string>
    <string name="my_profile_title">My Profile</string>

    <!-- main activity-->
    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="medicine_name">Medicine Name</string>

    <!-- main content -->
    <string name="no_boards_are_available">No Boards are Available!</string>

    <!-- details to display -->
    <string name="prescribed_for">Prescribed For</string>
    <string name="prescribed_by">Prescribed By</string>
    <string name="time">Time</string>
    <string name="okay">Okay</string>

</resources>