<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.DetailsToDisplayActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_details_to_display_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/ColorPrimaryDark"
            app:popupTheme="@style/AppTheme.PopUpOverlay">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Details begin here -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dtd_marginTop">

            <TextView
                android:id="@+id/dtd_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/medicine_name"
                android:textColor="#000000"
                android:layout_margin="@dimen/dtd_tv_margin"
                android:textSize="@dimen/dtd_text_size"/>
        <TextView
            android:id="@+id/dtd_prescribed_for"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prescribed_for"
            android:textColor="#000000"
            android:layout_margin="@dimen/dtd_tv_margin"
            android:textSize="@dimen/dtd_text_size"/>
        <TextView
            android:id="@+id/dtd_prescribed_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prescribed_by"
            android:textColor="#000000"
            android:layout_margin="@dimen/dtd_tv_margin"
            android:textSize="@dimen/dtd_text_size"/>
        <TextView
            android:id="@+id/dtd_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time"
            android:textColor="#000000"
            android:layout_margin="@dimen/dtd_tv_margin"
            android:textSize="@dimen/dtd_text_size"/>




    </LinearLayout>

    <Button
        android:id="@+id/btn_dtd_okay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/create_board_btn_marginTop"
        android:background="@drawable/shape_button_rounded"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:paddingStart="75dp"
        android:paddingEnd="75dp"
        android:text="@string/okay"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_text_size"/>

</LinearLayout>