<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.CreateBoardActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_create_board_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/ColorPrimaryDark"
            app:popupTheme="@style/AppTheme.PopUpOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="@dimen/create_board_content_padding">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="@dimen/card_view_elevation"
            android:layout_margin="@dimen/card_view_layout_content_margin"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/card_view_layout_content_padding"
                android:orientation="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/create_board_til_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_board_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/medicine_name"
                        android:inputType="text"
                        android:textSize="@dimen/dtd_text_size"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dtd_ll_marginTop">
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_prescribed_for"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prescribed_for"
                            android:textSize="@dimen/dtd_text_size"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dtd_ll_marginTop">
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_prescribed_by"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prescribed_by"
                            android:textSize="@dimen/dtd_text_size"/>
                    </com.google.android.material.textfield.TextInputLayout>


                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>


    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:outlineSpotShadowColor="@color/ColorPrimaryDark"
        android:outlineAmbientShadowColor="@color/ColorPrimaryDark"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" />

    <ToggleButton
        android:id="@+id/btnToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@id/timePicker"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:checked="false"
        android:onClick="onToggleClicked"
        android:text="Set Alarm" />

    <Button
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/create_board_btn_marginTop"
        android:background="@drawable/shape_button_rounded"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:paddingStart="75dp"
        android:paddingEnd="75dp"
        android:text="@string/create"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_text_size"/>
    </LinearLayout>
    <!-- Alarm
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />


        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:checked="false" />




    </LinearLayout> -->

</LinearLayout>
</ScrollView>